force-app/main/default/objects/Action_Plan_Automation__mdt/Action_Plan_Automation__mdt.object-meta.xml
<CustomObject>
    <label>Action Plan Automation</label>
    <pluralLabel>Action Plan Automations</pluralLabel>
</CustomObject>