force-app/main/default/objects/Action_Plan_Automation__mdt/fields/Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date__c</fullName>
    <defaultValue>&quot;1.12&quot;</defaultValue>
    <description>Day and Month when automatic process of Action plan creation starts.</description>
    <inlineHelpText>Day and Month when automatic process of Action plan creation starts. Process is scheduled separately. Format: D.MM</inlineHelpText>
    <label>Creation Date</label>
    <length>5</length>
    <type>Text</type>
</CustomField>