force-app/main/default/objects/Action_Plan_Automation__mdt/fields/Notification_Title__c.field-meta.xml
<CustomField>
    <fullName>Notification_Title__c</fullName>
    <label>Notification Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>