force-app/main/default/objects/Action_Plan_Automation__mdt/fields/Number_of_days_before_creation__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days_before_creation__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Number of days before creation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>